Rewrite send-to-remote method to use current REST, not use HttpClient